homepage and desktop nav done

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -86,6 +86,10 @@
 @import "templates/front";
 @import "templates/kitchen-sink";
 @import "templates/home";
+@import "templates/about";
 @import "templates/footer";
 @import "templates/banner-full";
+
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Oswald:300&display=swap');
 
