--- a/src/assets/scss/components/_custom-components.scss
+++ b/src/assets/scss/components/_custom-components.scss
@@ -1,3 +1,17 @@
 // ++++++++++++++++++++++++++++
 // Components
 // ++++++++++++++++++++++++++++
+
+// Cards - Clients and Partners
+.partner-card,
+.client-card {
+    @include flex;
+    @include flex-align($x: center);
+    border: none;
+
+    .card-section {
+        img {
+            width: 100%;
+        }
+    }
+}
