--- a/src/assets/scss/global/_globals.scss
+++ b/src/assets/scss/global/_globals.scss
@@ -8,8 +8,9 @@ body {
 }
 
 h1 {
-    font-weight: bold;
     font-size: 1.5rem;
+    letter-spacing: 0.25rem;
+
     @include breakpoint(medium) {
         font-size: 3rem;
     }
@@ -17,11 +18,17 @@ h1 {
     @include breakpoint(large) {
         font-size: 4rem;
     }
+
+    &.header {
+        text-align: center;
+    }
 }
 
 h2 {
-    font-weight: bold;
     font-size: 1.25rem;
+    letter-spacing: 0.25rem;
+    font-variant: small-caps;
+
     @include breakpoint(medium) {
         font-size: 2rem;
     }
@@ -344,7 +351,7 @@ a {
     position: absolute;
     object-fit: cover;
     object-position: 0 0;
-    z-index: -1;
+    z-index: -2;
     width: 200%;
     max-width: initial; 
     min-height: 200%;
