--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -29,7 +29,7 @@ a.blue-button {
 a.yellow-button {
     margin: 20px 0;
     width: 100%;
-    height: 100%;
+    // height: 100%;
     padding: 10px 70px;
     color: #ffc52a;
     text-align: center;
