--- a/src/assets/scss/templates/_banner-full.scss
+++ b/src/assets/scss/templates/_banner-full.scss
@@ -1,11 +1,3 @@
-.absolute-wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    z-index: -1;
-    top: 0;
-}
-
 .site-banner-content {
     .site-banner-media {
         // @include xy-grid();
@@ -52,6 +44,14 @@
             @include flex;
             @include flex-align($x: right);
             margin-right: 10%;
+
+            @include breakpoint(medium) {
+
+            }
+
+            @include breakpoint(large) {
+                
+            }
 
             .site-banner-header {
                 @include flex;
