--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -80,7 +80,8 @@ $foundation-palette: (
 $light-gray: #e6e6e6;
 $medium-gray: #adadad;
 $dark-gray: #313131;
-$black: #0a0a0a;
+$CRG-gray: #303030;
+$black: #2e2e2e;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
@@ -110,6 +111,7 @@ $print-transparent-backgrounds: true;
 $breakpoints: (
   small: 0,
   medium: 640px,
+  middle: 840px,
   large: 1024px,
   xlarge: 1200px,
   xxlarge: 1440px,
