--- a/src/assets/scss/components/_custom-components.scss
+++ b/src/assets/scss/components/_custom-components.scss
@@ -15,3 +15,167 @@
         }
     }
 }
+
+// featured left and right
+.full-width-container {
+    position: relative;
+
+    .full-width-bg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-color: $CRG-gray;
+    }
+
+    .feature-right-container,
+    .feature-left-container {
+        @include xy-grid-container;
+
+        .width-container {
+            @include xy-grid();
+            padding: 100px 0;
+
+            .text-container-right,
+            .text-container-left,
+            .img-container-left,
+            .img-container-right {
+                @include xy-cell(12);
+                @include flex-align-self(bottom);
+
+                @include breakpoint(middle) {
+                    @include xy-cell(6);
+                }
+            }
+
+            .text-container-right,
+            .text-container-left {
+                p {
+                    padding: 20px 0;
+                }
+            }
+
+            .img-container-left,
+            .img-container-right {
+                @include flex;
+                @include flex-align($x: center);
+
+                .overlay-nocolor {
+                    opacity: 0;
+                }
+
+                @include breakpoint(medium) {
+                    @include flex-align($x: null);
+                }
+
+                @include breakpoint(middle) {
+                    .overlay-nocolor {
+                        opacity: 1;
+                    }
+                }
+
+                img {
+                    
+                }
+            }
+        }
+    }
+
+    .feature-left-container {
+        .text-container-left {
+            color: $white;
+        }
+    }
+
+    .feature-right-container {
+        .text-container-right {
+            text-align: right;
+
+            h2 {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+
+                @include breakpoint(medium) {
+                    align-items: end;
+                }
+            }
+        }
+    }
+}
+
+// Floating circle bullets
+.product-bullets-container {
+
+    .product-bullets {
+        @include xy-grid-container;
+        @include xy-grid;
+        padding-top: 100px;
+
+        @include breakpoint(medium) {
+            padding-top: 0;
+        }
+
+        li {
+            list-style: none;
+            width: 100%;
+            @include xy-cell(12);
+            padding-top: 25px;
+
+            @include breakpoint(middle) {
+                @include xy-cell(4);
+            }
+
+            .v-center-container {
+                
+                .v-center-table {
+                    text-align: center;
+                    @include flex;
+                    @include flex-direction(column);
+
+                    @include breakpoint(medium) {
+                        @include flex-direction(row);
+
+                        &.switch-card .product-bullets-img {
+                            order: 2;
+                        }
+    
+                        &.switch-card .product-bullet-p-container {
+                            order: 1;
+                        }
+                    }
+
+                    @include breakpoint(middle) {
+                        @include flex-direction(column);
+                        &.switch-card .product-bullets-img {
+                            order: 1;
+                        }
+    
+                        &.switch-card .product-bullet-p-container {
+                            order: 2;
+                        }
+                    }
+
+                    .product-bullets-img {
+                        margin: 0 auto;
+                        width: 200px;
+                        height: 200px;
+                        border-radius: 100%;
+                        object-fit: cover;
+                        border: 2px solid $primary-color;
+                    }
+
+                    .product-bullet-p-container {
+                        margin: 0 auto;
+                        padding: 20px 0 0 0;
+                        width: 200px;
+                        @include flex-align-self(middle);
+                    }
+                }
+            }
+        }
+    }
+}
