--- a/src/assets/scss/modules/_mobile-navigation.scss
+++ b/src/assets/scss/modules/_mobile-navigation.scss
@@ -1,75 +1,49 @@
-.site-header.mobile {
-    bottom: 0;
-    top: auto;
-    @include flex;
-    @include flex-direction(column);
-    text-align: center;
-
-    .title-bar[data-responsive-toggle="mobile-menu"] {
-        background-color: $secondary-color;
-        display: block;
-        order: 2;
-        width: 100%;
-        height: 50px;
-        padding: 0.1rem;
-
-        @include breakpoint(medium) {
-            order: 1;
-        }
-    
-        .title-bar-left {
-            padding: 0;
-            width: 100%;
-            height: 100%;
+.site-header {
+    .grid-container {
+        .mobile-nav {
+            position: fixed;
             @include flex;
-            @include flex-align($x: center, $y: middle);
+            @include flex-direction(column);
+            width: 100%;
+            bottom: 0;
+            z-index: 10;
+            text-align: center;
 
-            .menu-icon {
-                width: 20%;
-                height: 100%;
-
-                &:after {
-                    top: 35%;
-                }
+            @include breakpoint(medium) {
+                display: none;
             }
+            
+            .nav-container {
+                background-color: $secondary-color;
+                display: block;
+                width: 100%;
+                height: 50px;
+                padding: 0.1rem;
+                order: 2;
+                z-index: 45;
 
-            .site-mobile-title {
-                a {
-                    display: none;
-                }
-            }
-        }
+                .menu-icon {
+                    width: 20%;
+                    height: 100%;
 
+                    &:active {
+                        color: $white;
+                    }
     
-    }
-
-    .site-navigation {
-        order: 1;
-        padding: 0;
-
-        @include breakpoint(medium) {
-            order: 2;
-        }
-
-        .top-bar-right {
-            &:before {
-                display: none;
-            }
-
-            .round-top {
-                display: none;
-            }
-
-            #menu-logo-container {
-                #menu-logo {
-                    display: none;
+                    &:after {
+                        top: 35%;
+                    }
                 }
             }
-
+        
+        
             .mobile-menu {
-                ul {
-                    background-color: $dark-nav-color;
+                padding: 0;
+                order: 1;
+                background-color: $black;
+                transition: all 0.2s;
 
+                ul {
                     li {
                         a {
                             color: white;
