--- a/src/assets/scss/templates/_banner-full.scss
+++ b/src/assets/scss/templates/_banner-full.scss
@@ -1,10 +1,13 @@
 .site-banner-content {
     .site-banner-media {
-        // @include xy-grid();
-        @include xy-gutters($gutter-position: top left right);
-        height: calc(100vh - #{$navHeight});
+        height: calc(100vh - 50px);
         position: relative;
         overflow: hidden;
+
+        @include breakpoint(medium) {
+            height: calc(100vh - #{$navHeight});
+            @include xy-gutters($gutter-position: top left right);
+        }
 
         .story {
             position: relative;
@@ -25,15 +28,26 @@
             left: 0;
             z-index: -1;
             border: 4px solid #E6E6E6;
+            display: none;
+
+            @include breakpoint(medium) {
+                display: block;
+            }
         }
 
         .banner-video, .video-ended-poster {
             object-fit: cover;
             object-position: 20% 20%;
             position: absolute;
-            height: 100vh;
+            height: 60%;
+            bottom: 0;
             width: 100vw;
             z-index: -2;
+
+            @include breakpoint(medium) {
+                height: 100vh;
+                bottom: auto;
+            }
         }
 
         .mobile {
@@ -42,15 +56,11 @@
 
         .site-banner-header-container {
             @include flex;
-            @include flex-align($x: right);
-            margin-right: 10%;
+            @include flex-align($x: center);
 
             @include breakpoint(medium) {
-
-            }
-
-            @include breakpoint(large) {
-                
+                @include flex-align($x: right);
+                margin-right: 10%;
             }
 
             .site-banner-header {
@@ -61,18 +71,20 @@
                 font-variant: small-caps;
                 color: black;
                 position: relative;
+                width: 100%;
 
                 @include breakpoint(medium) {
-
-                }
-
-                @include breakpoint(large) {
-                    
+                    width: initial;
                 }
 
                 .center-home-logo {
-                    width: 100%;
+                    width: 75%;
                     height: auto;
+                    margin: 0 auto;
+
+                    @include breakpoint(medium) {
+                        width: 100%
+                    }
                 }
 
                 .social-media-menu {
@@ -111,18 +123,39 @@
                 .banner-title {
                     position: relative;
                     line-height: 1rem;
-                    font-size: 2rem;
+                    font-size: 1rem;
                     text-transform: uppercase;
                     padding: 20px 20px 20px 20px;
 
                     &:after {
                         @include yellow-line-center();
+                        width: 200px;
+
+                        @include breakpoint(medium) {
+                            @include yellow-line-center();
+                        }
+                    }
+
+                    @include breakpoint(medium) {
+                        font-size: 1.5rem;
+                    }
+    
+                    @include breakpoint(large) {
+                        font-size: 2rem;
                     }
                 }
 
                 strong {
-                    font-size: 1.2rem;
+                    font-size: .85rem;
                     text-transform: lowercase;
+
+                    @include breakpoint(medium) {
+                        font-size: 1rem;
+                    }
+    
+                    @include breakpoint(large) {
+                        font-size: 1.2rem;
+                    }
                 }
 
                 a {
@@ -141,8 +174,17 @@
                 z-index: -2;
                 background-color: black;
                 color: $light-gray;
-                padding: 20px;
-                font-size: 0.7rem;
+                padding: 10px;
+                font-size: 0.5rem;
+
+                @include breakpoint(medium) {
+                    font-size: 0.6rem;
+                    padding: 20px;
+                }
+
+                @include breakpoint(middle) {
+                    font-size: 0.7rem;
+                }
 
                 a {
                     position: absolute;
@@ -151,8 +193,12 @@
                 }
 
                 img {
-                    width: 150px;
+                    width: 125px;
                     height: auto;
+    
+                    @include breakpoint(middle) {
+                        width: 150px;
+                    }
                 }
             }
         }
