--- a/src/assets/scss/templates/_banner-no.scss
+++ b/src/assets/scss/templates/_banner-no.scss
@@ -1,3 +1,12 @@
-.partner-page {
+
+.page-template-page-extra .site-content {
     margin-top: 2rem;
+
+    @include breakpoint(medium) {
+        margin-top: 6rem;
+    }
+
+    @include breakpoint(middle) {
+        margin-top: 8rem;
+    }
 }
