working team page

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -71,7 +71,6 @@
 @import "modules/navigation";
 @import "modules/mobile-navigation";
 @import "modules/content";
-@import "modules/footer";
 @import "modules/editor-style";
 
 // Components
@@ -95,6 +94,7 @@
 @import "templates/banner-no";
 @import "templates/banner-small";
 @import "templates/page-extra";
+@import "templates/team";
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Oswald:300&display=swap');
