--- a/src/assets/scss/templates/_product.scss
+++ b/src/assets/scss/templates/_product.scss
@@ -2,7 +2,6 @@
     .crg-header {
         @include xy-grid;
         text-align: center;
-        // margin: 0 auto;
 
         h1 {
             @include xy-cell(12);
@@ -13,6 +12,12 @@
             max-width: 400px;
             margin: 0 auto;
             margin-top: 20px;
+        }
+    }
+
+    .product-bullets-container {
+        &:after {
+            margin-top: 50px;
         }
     }
 }
