--- a/src/assets/scss/components/_custom-components.scss
+++ b/src/assets/scss/components/_custom-components.scss
@@ -44,7 +44,6 @@
             .img-container-left,
             .img-container-right {
                 @include xy-cell(12);
-                @include flex-align-self(bottom);
 
                 @include breakpoint(middle) {
                     @include xy-cell(6);
@@ -53,15 +52,27 @@
 
             .text-container-right,
             .text-container-left {
-                p {
-                    padding: 20px 0;
+                h2 {
+                    padding-top: 30px;
+                    width: 100%;
+
+                    @include breakpoint(medium) {
+                        padding-top: 0;
+                    }
                 }
+
+                p {
+                    padding: 20px 0;  
+                }
+
+                
             }
 
             .img-container-left,
             .img-container-right {
                 @include flex;
                 @include flex-align($x: center);
+                @include flex-align-self(top);
 
                 .overlay-nocolor {
                     opacity: 0;
@@ -78,7 +89,7 @@
                 }
 
                 img {
-                    
+                    // @include flex-align-self(top);
                 }
             }
         }
@@ -92,16 +103,42 @@
 
     .feature-right-container {
         .text-container-right {
-            text-align: right;
+            order: 2;
+            
+            @include breakpoint(medium) {
+                text-align: right;
+            }
+
+            @include breakpoint(middle) {
+                order: 1;
+            }
+
+            p {
+                text-align: left;
+
+                @include breakpoint(medium) {
+                    text-align: right;
+                }
+            }
 
             h2 {
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
+                text-align: left;
 
                 @include breakpoint(medium) {
-                    align-items: end;
+                    align-items: flex-end;
+                    text-align: right;
                 }
+            }
+        }
+
+        .img-container-right {
+            order: 1;
+
+            @include breakpoint(middle) {
+                order: 2;
             }
         }
     }
@@ -113,11 +150,11 @@
     .product-bullets {
         @include xy-grid-container;
         @include xy-grid;
-        padding-top: 100px;
+        padding-top: 0;
 
-        @include breakpoint(medium) {
-            padding-top: 0;
-        }
+        // @include breakpoint(medium) {
+        //     padding-top: 0;
+        // }
 
         li {
             list-style: none;
