--- a/src/assets/scss/global/_globals.scss
+++ b/src/assets/scss/global/_globals.scss
@@ -1,6 +1,8 @@
 html {
     width: 100%;
     height: 100%;
+    visibility: hidden;
+    opacity: 0;
 
     .no-js {
         // @include breakpoint(small only) {
@@ -16,11 +18,14 @@ html {
 }
 
 body {
-
     .site-content {
         margin-top: 0;
     }
 
+    .page-content {
+        @include xy-grid-container;
+        padding: 0 0 50px 0;
+    }
 }
 
 h1 {
@@ -41,22 +46,22 @@ h1 {
 }
 
 h2 {
-    font-size: 1.25rem;
+    font-size: 2rem;
     letter-spacing: 0.25rem;
     font-variant: small-caps;
 
     @include breakpoint(medium) {
-        font-size: 2rem;
+        font-size: 3rem;
     }
 
     @include breakpoint(large) {
-        font-size: 3rem;
+        font-size: 4rem;
     }
 }
 
 .entry-content-page {
     // @include xy-grid-container;
-    // padding: 50px 30px 30px 50px;
+    padding-top: 50px;
 
     @include breakpoint(medium) {
         padding-top: 100px;
