--- a/src/assets/scss/templates/_footer.scss
+++ b/src/assets/scss/templates/_footer.scss
@@ -165,7 +165,7 @@
                 font-size: 0.75rem;
             }
 
-            @include social-media;
+            @include social-media(center);
         }
     }
     
