--- a/src/assets/scss/templates/_banner-full.scss
+++ b/src/assets/scss/templates/_banner-full.scss
@@ -88,7 +88,7 @@
                 }
 
                 .social-media-menu {
-                    @include social-media;
+                    @include social-media(center);
                 }
 
                 .header-background {
