--- a/src/assets/scss/templates/_team.scss
+++ b/src/assets/scss/templates/_team.scss
@@ -10,23 +10,29 @@
         @include flex-align($x: center);
 
         .grid-item {
-            @include xy-cell(4);
+            @include xy-cell(6);
             @include xy-gutters(50, $gutter-position: bottom);
-            transition: all 0.2s ease-in-out;
+            position: relative;
+            transition: all 0.4s ease-out;
+            padding: 10px;
 
-                &:hover,
-                &:focus {
-                    transform: scale(1.1);
-
-                    a {
-                        img {
-                            border-radius: 100%;
-                            border: 4px solid $primary-color;
-                        }
+            &:hover,
+            &:focus {
+                transform: scale(1.1);
+                
+                a {
+                    img {
+                        border-radius: 100%;
+                        // border: 4px solid $primary-color;
                     }
                 }
+            }
 
             @include breakpoint(medium) {
+                @include xy-cell(4);
+            }
+
+            @include breakpoint(middle) {
                 @include xy-cell(2.4);
             }
     
@@ -48,7 +54,7 @@
                 .img-container {
 
                     img {
-                        transition: all 0.2s ease-in-out;
+                        transition: all 0.3s ease-in-out;
                         object-fit: cover;
                     }
                 }
@@ -69,26 +75,45 @@
 .full-image {
     position: relative;
     min-height: 100vh;
+    margin-top: 0;
     @include flex;
     @include flex-align($x: right);
     @include xy-grid;
+
+    @include breakpoint(medium) {
+        margin-top: 50px;
+        min-height: calc(100vh - 50px);
+    }
 
     .team-member-bg {
         min-width: 100%;
         height: 50vh;
         @include xy-cell(12);
+        @include xy-gutters(0, $gutter-position: left right);
         overflow: hidden;
 
         img{
             object-fit: cover;
+            object-position: left;
             min-width: 100%;
-            max-width: initial;
             height: 100%;
+
+            @include breakpoint(medium) {
+                object-position: center;
+            }
+
+            @include breakpoint(middle) {
+                object-position: 20%;
+            }
+
+            @include breakpoint(xlarge) {
+                object-position: left;
+            }
         }
 
         @include breakpoint(middle) {
-            height: 100%;
             position: absolute;
+            height: 100%;
         }
     }
 
@@ -106,7 +131,7 @@
 
         .team-member-h1 {
             margin-top: 10px;
-            font-size: 3rem;
+            font-size: 3.5rem;
 
             @include breakpoint(middle) {
                 margin-bottom: 5px;
@@ -125,16 +150,110 @@
             strong {
                 font-size: 1.2rem;
             }
+
+            .team-member-social {
+                @include social-media(left);
+
+                li {
+                    padding: 0 20px 0 0 !important;
+                }
+            }
         }
 
         .team-member-p {
             padding: 20px 10px;
             background: rgba(255, 255, 255, 0.2);
-            max-width: 80%;
+            max-width: 100%;
             font-size: 1.2rem;
 
             @include breakpoint(middle) {
                 padding: 40px 40px 40px 40px;
+                font-size: 1.4rem;
+                max-width: 80%;
+            }
+        }
+    }
+
+    .team-member-post-navigation {
+        width: 100%;
+        @include xy-cell(12);
+        @include flex-align-self(bottom);
+        z-index: 1;
+
+        .navigation.post-navigation{
+            .nav-links {
+                @include xy-grid; 
+                @include flex-align($x: right);
+
+                & > .nav-previous,
+                & > .nav-next {
+                    @include xy-cell(6);
+                    padding: 20px;
+                    
+                    a {
+                        width: 100%;
+                        color: $black;
+
+                        @include breakpoint(middle) {
+                            color: $white;
+                        }
+                    }
+
+                    span {
+                        &.nav-subtitle {
+                            display: none;
+                        }
+
+                        &.nav-title {
+                            font-weight: bold;
+                            transition: all 0.3s ease-out;
+                        }
+                    }
+                }
+
+                &:hover,
+                &:focus {
+                    .nav-next .nav-next,
+                    .nav-previous .nav-previous {
+                        .nav-title {
+                            transform: scale(1.1);
+                        }
+                        
+                    }
+                }
+                
+                .nav-previous .nav-previous {
+                    @include flex;
+                    // @include flex-direction()
+
+                    &:before {
+                        content: "";
+                        @include css-triangle(10px, $secondary-color, left);
+                        @include flex-align-self(middle);
+                        margin-right: 20px;
+                    }
+
+                    span {
+                        padding-right: 10px;
+                    }
+                }
+
+                .nav-next .nav-next {
+                    text-align: right;
+                    @include flex;
+                    @include flex-align($x: right);
+
+                    &:after {
+                        content: "";
+                        @include css-triangle(10px, $secondary-color, right);
+                        @include flex-align-self(middle);
+                        margin-left: 20px;
+                    }
+
+                    span {
+                        padding-left: 10px;
+                    }
+                }
             }
         }
     }
