--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -95,6 +95,8 @@
 @import "templates/banner-small";
 @import "templates/page-extra";
 @import "templates/team";
+@import "templates/post";
+@import "templates/post-grid";
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Oswald:300&display=swap');
